--- a/chabad-student-network-ottawa/building.css
+++ b/chabad-student-network-ottawa/building.css
@@ -69,7 +69,7 @@ td.chabad_text_head img {
 div#chabad_head .chabad_navigator_bar {
   background-size: 100%;
   /*width: 640px;*/
-  float: right;
+  /* float: right; */
   height: 36px;
   display: inline-block;
 }
@@ -89,9 +89,6 @@ body.mobile .navi li.parent:first-child {
 
 div#chabad_main_content .chabad_navigator_bar .chabad_menu_content {
   height: 100%;
-}
-
-div#chabad_head .chabad_navigator_bar .chabad_menu_content {
 }
 
 div#chabad_head .chabad_navigator_bar ul#menu {
@@ -280,9 +277,6 @@ div.chabad_left_colum .content_page,
   overflow: hidden;
 }
 
-div#content_banner {
-}
-
 div#chabad_head .flowers,
 div#co_calendar
   .co_calendar_body
@@ -339,9 +333,6 @@ div#co_calendar
 .chabad_updates_text .item:last-child,
 .co_calendar_text .item:last-child {
   border-bottom: none !important;
-}
-
-#co_photo_gallery .co_photo_gallery_head {
 }
 
 .co_photo_gallery a {
@@ -482,8 +473,7 @@ body.mobile .chabad_navigator_bar .chabad_menu_content li a {
   display: inline-block;
   font-weight: bold;
   text-decoration: none;
-  /*float: none;*/
-  float: left;
+  /* float: left; */
   text-align: left;
 }
 
@@ -848,4 +838,90 @@ p#home {
 .footer,
 .footer a {
   color: white;
+}
+
+/*THERMOMETER*/
+
+#thermometer {
+  background: #dddddd;
+  height: 300px;
+  width: 50px;
+  border-radius: 100px;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+#current {
+  width: 10px;
+  background: #012444;
+  height: 10%;
+  border-radius: 100px;
+  width: 100%;
+  min-height: 30px;
+  -moz-animation: grow 2s 1;
+  -webkit-animation: grow 2s 1;
+  animation: grow 2s 1;
+}
+
+div#goal-text {
+  position: relative;
+  right: 100px;
+  top: 40px;
+  color: white;
+  font-weight: bold;
+}
+
+#current-text {
+  position: relative;
+  right: 90px;
+  top: 7px;
+  color: white;
+}
+
+#donate-btn {
+  display: inline-block;
+  padding: 10px 15px;
+  width: 165px;
+  position: relative;
+  border-bottom: 3px solid #c7bfbf;
+  right: 110px;
+  text-transform: uppercase;
+  border-radius: 5px;
+  text-align: center;
+  margin-top: 30px;
+  background: #dddddd;
+}
+
+#donate-btn:hover {
+  text-decoration: none;
+  background: #c7bfbf;
+}
+
+@-moz-keyframes grow {
+  0% {
+    height: 30px;
+  }
+  100% {
+    height: 10%;
+  }
+}
+
+@-webkit-keyframes grow {
+  0% {
+    height: 30px;
+  }
+  100% {
+    height: 10%;
+  }
+}
+
+@keyframes grow {
+  0% {
+    height: 30px;
+  }
+  100% {
+    height: 10%;
+  }
 }
