--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -10,6 +10,10 @@ p {
   font-family: 'Montserrat', sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 body.mobile div#chabad_body_page,
 body.cco_templateless_page {
   background-image: url(https://jewishbarrington.com/media/images/1055/FuoX10558832.jpg) !important;
@@ -1022,13 +1026,13 @@ body.mobile .form-line {
 #latest-donors li {
   display: inline-block;
   margin-right: 15px;
-  color: #d5caae;
+  color: black;
 }
 
 #latest-donors li:after {
   content: '\2022';
   margin-left: 15px;
-  color:#736d4e;
+  color: #f6c17c;
 }
 
 #latest-donors li:last-child:after {
