Add styling + js update

--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -854,6 +854,7 @@ p#home {
   border-radius: 100px;
   display: flex;
   padding: 10px;
+  margin: auto;
 }
 
 #current {
@@ -874,17 +875,11 @@ p#home {
 }
 
 div#goal-text {
-  position: relative;
-  right: 100px;
-  top: 40px;
   color: white;
   font-weight: bold;
 }
 
 #current-text {
-  position: relative;
-  right: 90px;
-  top: 7px;
   color: white;
 }
 
@@ -892,9 +887,7 @@ div#goal-text {
   display: inline-block;
   padding: 10px 15px;
   width: 165px;
-  position: relative;
   border-bottom: 3px solid #c7bfbf;
-  right: 110px;
   text-transform: uppercase;
   border-radius: 5px;
   text-align: center;
@@ -1057,4 +1050,8 @@ body.mobile .form-line {
 
 #latest-items-wrapper > div {
   width: 100%;
+}
+
+#cta-section {
+  text-align: center;
 }
