--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -1084,7 +1084,7 @@ body.mobile .form-line {
   text-align: right;
 }
 
-#id_3 .form-line input[type=checkbox]:after {
+#id_3 .form-checkbox:after {
   content: '\f10c';
   font-family: FontAwesome;
   background: #f8fbf4;
@@ -1095,7 +1095,7 @@ body.mobile .form-line {
   left: -2px;
 }
 
-#id_3 .form-line input[type=checkbox]:checked:after {
+#id_3 .form-checkbox:checked:after {
   content: "\f058";
 }
 
