--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -1275,3 +1275,7 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
 }
+
+input, textarea {
+  font-size: 16px;
+}
