--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -1271,11 +1271,11 @@ li#id_16:after, li#id_17:after, li#id_18:after {
 
 
 /* HIDE NUMBER SPINNERS */
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
 }
 
-input, textarea {
+input, textarea, select {
   font-size: 16px;
 }
