--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -1277,5 +1277,5 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 input, textarea, select {
-  font-size: 16px;
+  font-size: 16px !important;
 }
