--- a/jewish-idaho/mikvah.css
+++ b/jewish-idaho/mikvah.css
@@ -197,7 +197,7 @@ div#chabad_main_content {
   right: 0;
 }
 
-div#chabad_right_colum>div {
+#chabad_right_colum>div {
   margin: 0 0 10px;
   overflow: visible;
   padding: 1px;
@@ -296,25 +296,25 @@ div#chabad_right_colum>div {
   content: '\25b2';
 }
 
-body.mobile div#chabad_head .chabad_navigator_bar {
+body.mobile #chabad_head .chabad_navigator_bar {
   width: calc(100% - 100px);
   height: auto;
   margin-top: 0;
   float: left;
 }
 
-body.mobile div#chabad_head .chabad_navigator_bar ul {
+body.mobile #chabad_head .chabad_navigator_bar ul {
   float: none;
   display: block;
 }
 
-body.mobile div#chabad_head .chabad_navigator_bar ul li {
+body.mobile #chabad_head .chabad_navigator_bar ul li {
   float: left;
   display: block;
   height: auto;
 }
 
-body.mobile div#chabad_head .chabad_navigator_bar ul li a {
+body.mobile #chabad_head .chabad_navigator_bar ul li a {
   float: left;
   padding: 5px;
   height: 100%;
@@ -380,7 +380,7 @@ body.mobile .chabad_navigator_bar .chabad_menu_content li a {
   text-align: left;
 }
 
-body.mobile div#chabad_head .chabad_navigator_bar .chabad_menu_content li a.arrow, body.mobile div#chabad_head .chabad_navigator_bar .chabad_menu_content ul li a.arrow {
+body.mobile #chabad_head .chabad_navigator_bar .chabad_menu_content li a.arrow, body.mobile #chabad_head .chabad_navigator_bar .chabad_menu_content ul li a.arrow {
   background: none;
   padding-right: initial;
 }
@@ -463,7 +463,7 @@ body.mobile #navigation.chabad_navigator_bar #menu, body.mobile #navigation.chab
   transition: height .5s;
 }
 
-body.mobile #navigation.chabad_navigator_bar #menu .sub_menu, body.mobile #chabad_head div.chabad_navigator_bar .sub_menu {
+body.mobile #navigation.chabad_navigator_bar #menu .sub_menu, body.mobile #chabad_head .chabad_navigator_bar .sub_menu {
   position: initial;
   display: block;
   width: auto;
@@ -477,11 +477,11 @@ body.mobile .chabad_navigator_bar .sub_menu_toggle:not(.expanded)+.sub_menu {
   height: 0;
 }
 
-body.mobile div.chabad_navigator_bar #menu .sub_menu ul {
+body.mobile .chabad_navigator_bar #menu .sub_menu ul {
   border-left: 3px solid #BEBEBE;
 }
 
-body.mobile div.chabad_navigator_bar .sub_menu li.last {
+body.mobile .chabad_navigator_bar .sub_menu li.last {
   border-bottom: none;
 }
 
@@ -525,7 +525,7 @@ body.mobile #chabad_body_content {
   overflow: hidden;
 }
 
-body.mobile div#chabad_updates, body.mobile div#co_calendar, body.mobile div.co_section, body.mobile div#chabad_box_text, body.mobile div#co_photo_gallery {
+body.mobile #chabad_updates, body.mobile #co_calendar, body.mobile .co_section, body.mobile #chabad_box_text, body.mobile #co_photo_gallery {
   margin-top: 10px;
   margin-bottom: 0;
   vertical-align: top;
@@ -536,7 +536,7 @@ body.mobile .chabad_banner_content .chabad_text_banner, body.mobile .chabad_box_
   padding-left: 10px;
 }
 
-body.mobile div#chabad_body_page, body.mobile.cco_templateless_page {
+body.mobile #chabad_body_page, body.mobile.cco_templateless_page {
   padding-top: initial;
 }
 
@@ -544,32 +544,32 @@ body.mobile .co_local_menu {
   margin-bottom: initial;
 }
 
-body.mobile div#chabad_head .chabad_logo a {
+body.mobile #chabad_head .chabad_logo a {
   text-decoration: none;
   display: inline-block;
 }
 
-body.mobile div#chabad_head .chabad_logo a div {
+body.mobile #chabad_head .chabad_logo a div {
   font-size: 27px;
 }
 
-body.mobile div#chabad_head {
+body.mobile #chabad_head {
   width: 100%;
   float: initial;
   height: auto;
 }
 
-body.mobile div#chabad_head table img {
+body.mobile #chabad_head table img {
   max-width: 100%;
   height: auto;
 }
 
-body.mobile div#chabad_head .chabad_content_head {
+body.mobile #chabad_head .chabad_content_head {
   position: relative;
   height: auto;
 }
 
-body.mobile div#chabad_head .chabad_logo {
+body.mobile #chabad_head .chabad_logo {
   margin: 0;
   position: relative;
   z-index: 1;
@@ -579,26 +579,26 @@ body.mobile div#chabad_head .chabad_logo {
   box-sizing: border-box;
 }
 
-body.mobile div#chabad_head .logocell {
+body.mobile #chabad_head .logocell {
   padding: 0;
   display: block;
   margin: 0 20px 0 0;
 }
 
-body.mobile div#chabad_head .chabad_text_head {
+body.mobile #chabad_head .chabad_text_head {
   display: none;
 }
 
-body.mobile div.chabad_right_column {
+body.mobile .chabad_right_column {
   text-align: center;
   margin-bottom: 15px;
 }
 
-body.mobile div#chabad_updates, body.mobile div#co_calendar, body.mobile div.co_section, body.mobile div#co_photo_gallery, body.mobile div#chabad_box_text {
+body.mobile #chabad_updates, body.mobile #co_calendar, body.mobile .co_section, body.mobile #co_photo_gallery, body.mobile #chabad_box_text {
   text-align: initial;
 }
 
-body.mobile div#chabad_box_text .chabad_box_text_body {
+body.mobile #chabad_box_text .chabad_box_text_body {
   padding: 10px 15px;
   margin: 0;
 }
@@ -759,9 +759,8 @@ span[id='7-form-required'] {
 }
 
 #current {
-  width: 10px;
   background: #012444;
-  height: 10%;
+  height: 100%;
   border-radius: 100px;
   width: 100%;
   min-height: 30px;
@@ -809,7 +808,7 @@ div#goal-text {
     height: 30px;
   }
   100% {
-    height: 10%;
+    height: 100%;
   }
 }
 
@@ -818,7 +817,7 @@ div#goal-text {
     height: 30px;
   }
   100% {
-    height: 10%;
+    height: 100%;
   }
 }
 
@@ -827,6 +826,6 @@ div#goal-text {
     height: 30px;
   }
   100% {
-    height: 10%;
+    height: 100%;
   }
 }
