--- a/jewish-idaho/mikvah.css
+++ b/jewish-idaho/mikvah.css
@@ -758,12 +758,17 @@ span[id='7-form-required'] {
   justify-content: flex-end;
 }
 
+#current-wrapper {
+  align-items: flex-end;
+  display: flex;
+  min-height: 30px;
+}
+
 #current {
   background: #012444;
   height: 100%;
   border-radius: 100px;
   width: 100%;
-  min-height: 30px;
   -moz-animation: grow 2s 1;
   -webkit-animation: grow 2s 1;
   animation: grow 2s 1;
